# aether_rad

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.md  REVIEW_BOARD_ASSESSMENT.md  Rust RAD Utility Development Plan.md  WASM.md
src/: app.rs  compiler.rs  io.rs  lib.rs  main.rs  model.rs  syntax.rs  theme.rs  ui.rs  validator.rs  widgets.rs
src/ui/: assets.rs  canvas.rs  code_preview.rs  hierarchy.rs  inspector.rs  mod.rs  palette.rs  variables.rs
tests/: integration_tests.rs
