[package]
name = "aether_rad"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework [cite: 31]
egui = "0.33.3"
eframe = "0.33.3"

# Serialization & SOM Infrastructure [cite: 8, 55]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"

# State Management
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Code Generation [cite: 181]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"

# Docking (Prepared for Phase 2) [cite: 75]
egui_dock = "0.18.0"

# Persistence
rfd = "0.15"

# Syntax Highlighting
syntect = "5"

# WASM support
web-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Override dependencies for WASM
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "FileReader",
    "Storage",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["native"]
native = []
wasm = ["web-sys", "wasm-bindgen"]
